deploy/k8s/gosubs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gosubs
  labels:
    app.kubernetes.io/name: gosubs
