deploy/k8s/gosubs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gosubs
  labels:
    app.kubernetes.io/name: gosubs
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gosubs
  ports:
    - name: http
      port: 8090
      targetPort: http
